List must be mutable. Remove debug.